--- a/src/main/resources/templates/dashboard/dashboard-student.html
+++ b/src/main/resources/templates/dashboard/dashboard-student.html
@@ -219,7 +219,7 @@
 <!--                                    <button class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">-->
 <!--                                        Apply-->
 <!--                                    </button>-->
-                                    <a type="button" th:href="@{/dashboard/student/talent-post/apply/{id}(id=${post.id})}" class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">Detail</a>
+                                    <a type="button" th:href="@{/dashboard/student/talent-post/apply/{id}(id=${post.id})}" class="inline-block w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700 text-center " >Detail</a>
                                 </div>
                             </div>
 
