--- a/src/main/resources/templates/talent-application/manage-talent-post-candidate.html
+++ b/src/main/resources/templates/talent-application/manage-talent-post-candidate.html
@@ -277,7 +277,7 @@
                                             </span>
                 </td>
                 <td class="px-6 py-4">
-                  <a th:href="@{/talentPostCandidate-list/profile/{id}(id=${post.user_profile_id})}"
+                  <a th:href="@{/profile/{id}(id=${post.user_profile_id})}"
                           class="inline-block px-3 py-1 text-xs font-medium rounded-md text-white bg-green-600 hover:bg-green-700 text-center">
                     Profile
                   </a>
