--- a/src/main/resources/templates/user/user-profile.html
+++ b/src/main/resources/templates/user/user-profile.html
@@ -11,10 +11,10 @@
 <!-- Profile Section -->
 <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg overflow-hidden">
     <div class="p-8 lg:flex lg:items-center lg:space-x-8">
-        <!-- Profile Picture -->
-        <div class="flex-shrink-0">
-            <img src="https://via.placeholder.com/150" alt="Profile Picture" class="rounded-full w-32 h-32 object-cover mx-auto lg:mx-0">
-        </div>
+<!--        &lt;!&ndash; Profile Picture &ndash;&gt;-->
+<!--        <div class="flex-shrink-0">-->
+<!--            <img src="https://via.placeholder.com/150" alt="Profile Picture" class="rounded-full w-32 h-32 object-cover mx-auto lg:mx-0">-->
+<!--        </div>-->
 
         <!-- Candidate Info -->
         <div class="mt-4 lg:mt-0 lg:flex-grow">
@@ -22,7 +22,7 @@
             <div class="flex flex-col sm:flex-row sm:justify-between mt-2">
                 <p class="text-gray-600">Job Location<br>Kuala Lumpur, Malaysia</p>
                 <p class="text-gray-600">Type of Employment<br>Part Time</p>
-                <p class="text-gray-600">Job Type<br>Program Coordinator</p>
+                <p class="text-gray-600" >Age<br th:text="*{age}"></p>
             </div>
         </div>
     </div>
@@ -65,9 +65,13 @@
 </div>
 
 <!-- Button -->
-<div class="max-w-4xl mx-auto mt-8 text-center">
-    <button onclick="history.back()" class="bg-purple-600 text-white py-3 px-8 rounded-md font-semibold hover:bg-purple-700 transition duration-200">Back</button>
-</div>
+    <div class="max-w-4xl mx-auto mt-8 text-center">
+        <div class="flex justify-center space-x-4">
+            <a href="/dashboard/student" class=" inline-block bg-purple-600 text-white py-3 px-8 rounded-md font-semibold hover:bg-purple-700 transition duration-200 text-center">Back</a>
+
+            <a th:if="${isStudent}" th:href="@{/student/profile/edit/{id}(id=${userProfile.id})}" class="inline-block bg-purple-600 text-white py-3 px-8 rounded-md font-semibold hover:bg-purple-700 transition duration-200 text-center">Edit</a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
